fix(Button): remove z-index
issue -  #298

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,6 +1,5 @@
 .Button {
   position: relative;
-  z-index: 1;
   display: inline-block;
   overflow: hidden;
   box-sizing: border-box;
